--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -4,7 +4,9 @@
 		<meta charset="utf8">
 		<title>Web Chat</title>                
 		<link rel="stylesheet" type="text/css" href="http://bootswatch.com/sandstone/bootstrap.css">
-		<script language="JavaScript" type="text/javascript" src="script.js"></script>
+		<script language="JavaScript" type="text/javascript" src="../js/script.js">
+
+		</script>
 		<style type="text/css" media="screen"></style>
 	</head>
 	<body>
