create post ajax

--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -9,7 +9,7 @@
 		<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
 		<style type="text/css" media="screen"></style>
 	</head>
-	<body>
+	<body onload="createUser()">
 		<div class="container">
 		<form class="form-horizontal">
   			<fieldset>
