--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -5,17 +5,17 @@
 	<head>
 		<meta charset="utf8">
 		<title>Web Chat</title> 
-		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
 		<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<style type="text/css" media="screen">
 			.mygrid-wrapper-div {
 				height: 480px;
-				overflow-y: scroll; 
+				overflow: scroll; 
 			}
 		</style>
 	</head>
-	<body >
+	<body onload="createUser()">
 		<div class="container">
 		{% csrf_token %}
 		<form class="form-horizontal">
@@ -23,15 +23,16 @@
 			    <div class="col-lg-3"></div>
 			    <div class="col-lg-6">
   				<div class="form-group">
+			      <div>
 			      	<div class="mygrid-wrapper-div"></div>
 			        <textarea class="form-control" rows="3" id="textArea"></textarea>
 			        <button type="submit" class="btn btn-primary">Send</button>
 			      </div>
-			      </div>
+			    </div>
 			    </div>
   			</fieldset>
   		</form>
 		</div>
 	</body>
-
+	
 </html>
