--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -10,23 +10,13 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<style type="text/css" media="screen"></style>
 	</head>
-	<body onload="createUser()">
+	<body>
 		<div class="container">
-		{% csrf_token %}
-		<form class="form-horizontal">
-  			<fieldset>
-			    <div class="col-lg-3"></div>
-			    <div class="col-lg-6">
-  				<div class="form-group">
-			      <div>
-			      	<div class="mygrid-wrapper-div"></div>
-			        <textarea class="form-control" rows="3" id="textArea"></textarea>
-			        <button type="submit" class="btn btn-primary">Send</button>
-			      </div>
-			    </div>
-			    </div>
-  			</fieldset>
-  		</form>
+			{% for chat in chats %}
+			<p>
+				{{ chat.chat_name }}: {{ chat.id }}
+			</p>
+			{% endfor %}
 		</div>
 	</body>
 	
