--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -17,10 +17,16 @@
 	</head>
 	<body>
 		<div class="container">
-			{% for chat in chats %}
-			<p>
-				{{ chat.chat_name }}: {{ chat.id }}
-			</p>
+			<table class="table table-striped table-hover">
+				<tr>
+					<td>Chat id</td>
+					<td>Chat name</td>
+				</tr>
+				{% for chat in chats %}
+				<tr>
+					<td>{{ chat.id }}</td>
+					<td>{{ chat.chat_name }}</td>
+				</tr>
 			{% endfor %}
 		</div>
 	</body>
