--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -23,10 +23,11 @@
 			    <div class="col-lg-3"></div>
 			    <div class="col-lg-6">
   				<div class="form-group">
-			        <div id="username" class="alert alert-dismissable alert-info">
-			        	<h1>{{ chat.name }}</h1>
+			        <div class="alert alert-dismissable alert-info">
+			        	<div class="col-lg-6"><h1>{{ chat.name }}</h1></div>
+			        	<div class="col-lg-6"></div>
 			        </div>
-			      	<div class="mygrid-wrapper-div"></div>
+			      	<div id="username" class="mygrid-wrapper-div"></div>
 			        <textarea class="form-control" rows="3" id="textArea"></textarea>
 			        <button type="submit" class="btn btn-primary">Send</button>
 			      </div>
