--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -23,11 +23,20 @@
 			    <div class="col-lg-3"></div>
 			    <div class="col-lg-6">
   				<div class="form-group">
-			        <div class="alert alert-dismissable alert-info">
-			        	<div class="col-lg-6"><h1>{{ chat.name }}</h1></div>
-			        	<div class="col-lg-6"></div>
+			        <div class="row">
+			        	<div class="col-lg-6">
+						<ul class="breadcrumb">
+						  <li id="chatname" class="active">Chat: {{ chat.chat_name }}</li>
+						</ul>
+			        	</div>
+			        	<div class="col-lg-6">
+						<ul class="breadcrumb">
+						  <li id="username" class="active"></li>
+						</ul>
+			        	</div>
+
 			        </div>
-			      	<div id="username" class="mygrid-wrapper-div"></div>
+			      	<div class="mygrid-wrapper-div"></div>
 			        <textarea class="form-control" rows="3" id="textArea"></textarea>
 			        <button type="submit" class="btn btn-primary">Send</button>
 			      </div>
