--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -24,7 +24,7 @@
 			    <div class="col-lg-6">
   				<div class="form-group">
 			        <div class="alert alert-dismissable alert-info">
-			        	<div class="col-lg-6"><h1>{{ chat.name }}</h1></div>
+			        	<div class="col-lg-6"><h1>{{ chat.chat_name }}</h1></div>
 			        	<div class="col-lg-6"></div>
 			        </div>
 			      	<div id="username" class="mygrid-wrapper-div"></div>
