--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -39,6 +39,7 @@
 			      	<div class="mygrid-wrapper-div"></div>
 			        <textarea class="form-control" rows="3" id="textArea"></textarea>
 			        <button type="submit" class="btn btn-primary">Send</button>
+			        <button href="../../" class="btn btn-primary">Exit</button>
 			      </div>
 			      </div>
 			    </div>
