--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -18,8 +18,6 @@
 	<body onload="authorisation()">
 		<div class="container">
 		{% csrf_token %}
-		<form class="form-horizontal">
-  			<fieldset>
 			    <div class="col-lg-3"></div>
 			    <div class="col-lg-6">
   				<div class="form-group">
@@ -31,20 +29,23 @@
 			        	</div>
 			        	<div class="col-lg-6">
 						<ul class="breadcrumb">
-						  <li id="username" class="active"></li>
+						  <li id="username" class="active">User: Unknown</li>
 						</ul>
 			        	</div>
 
 			        </div>
 			      	<div class="mygrid-wrapper-div"></div>
-			        <textarea class="form-control" rows="3" id="textArea"></textarea>
-			        <button type="submit" class="btn btn-primary">Send</button>
+			      	<form id="post_message">
+			      	{% csrf_token %}
+			        <textarea class="form-control" rows="3" id="textArea" name="message"></textarea>
+			        <input type="hidden" name="user" id="user_id" />
+			        </form>
+			        <button class="btn btn-primary" onclick="post_message()">Send</button>
 			        <button href="../../" class="btn btn-primary">Exit</button>
 			      </div>
 			      </div>
 			    </div>
-  			</fieldset>
-  		</form>
+
 		</div>
 	</body>
 
