--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -34,7 +34,18 @@
 			        	</div>
 
 			        </div>
-			      	<div class="mygrid-wrapper-div"></div>
+			      	<div class="mygrid-wrapper-div">
+			      	
+			      	<table class="table">
+			      		{% for m in messages %}
+							<tr>
+								<td>{{ m.user_id.name }}</td>
+								<td>{{ m.message }}</td>
+								<td>{{ m.post_time }}</td>
+							</tr>
+						{% endfor %}
+					</table>
+			      	</div>
 			      	<form id="post_message">
 			      	{% csrf_token %}
 			        <textarea class="form-control" rows="3" id="textArea" name="message"></textarea>
