get messages from date and show it

--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -36,14 +36,8 @@
 			        </div>
 			      	<div class="mygrid-wrapper-div">
 			      	
-			      	<table class="table">
-			      		{% for m in messages %}
-							<tr>
-								<td>{{ m.user_id.name }}</td>
-								<td>{{ m.message }}</td>
-								<td>{{ m.post_time }}</td>
-							</tr>
-						{% endfor %}
+			      	<table id="chatTable" class="table">
+			      		
 					</table>
 			      	</div>
 			      	<form id="post_message">
