message view edit

--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -12,7 +12,7 @@
 		<style type="text/css" media="screen">
 			.mygrid-wrapper-div {
 				height: 480px;
-				overflow-y: scroll; 
+				overflow-y: auto; 
 			}
 		</style>
 	</head>
