--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -12,7 +12,8 @@
 		<style type="text/css" media="screen">
 			.mygrid-wrapper-div {
 				height: 480px;
-				overflow-y: auto; 
+				overflow-y: auto;
+				word-break: break-word;
 			}
 		</style>
 	</head>
