--- a/chat/templates/registration.html
+++ b/chat/templates/registration.html
@@ -6,7 +6,7 @@
 		<meta charset="utf8">
 		<title>Web Chat</title> 
 		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
-		<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
+		<script language="JavaScript" type="text/javascript" src="{% static 'js/registration.js' %}"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<style type="text/css" media="screen">
 			
@@ -15,7 +15,7 @@
 	<body>
   <div class="container">
   <div class="col-lg-6 offset-3">
-<form class="form-horizontal" action='../create_user' method="POST">
+<form id="reg_form" class="form-horizontal">
   <fieldset>
 
     <div id="legend">
@@ -79,11 +79,11 @@
     <div class="form-group">
       <!-- Button -->
       <div class="controls">
-        <button class="btn btn-success">Register</button>
       </div>
     </div>
   </fieldset>
 </form>
+        <button class="btn btn-success" onclick="f()">Register</button>
 </div>
 </div>
 </body>
