--- a/chat/templates/registration.html
+++ b/chat/templates/registration.html
@@ -15,7 +15,7 @@
 	<body>
   <div class="container">
   <div class="col-lg-6 offset-3">
-<form class="form-horizontal" action='../create_user' method="POST">
+<form class="form-horizontal" action='../create_user/' method="POST">
   <fieldset>
 
     <div id="legend">
