--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -1,54 +1,64 @@
 {% load staticfiles %}
 <!Doctype HTML>
 <html>
-	<head>
-		<meta charset="utf8">
-		<title>Web Chat</title> 
-		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
-		<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-		<style type="text/css" media="screen">
+<head>
+	<meta charset="utf8">
+	<title>Web Chat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
+	<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+	<style type="text/css" media="screen">
 			.mygrid-wrapper-div {
 				height: 480px;
 				overflow-y: scroll; 
 			}
 		</style>
-	</head>
-	<body>
-		{% csrf_token %}
-		<div class="navbar navbar-inverse">
-		  <div class="navbar-collapse collapse navbar-inverse-collapse">
-		    <ul class="nav navbar-nav">
-		      <li><a href="#">Home</a></li>
-		      
-		    </ul>
-		     <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="username" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="password" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-default">Sign In</button>
-                	<button href='registration' class="btn btn-default">Sign Up</button>
-                </form>
+</head>
+<body>
+	{% csrf_token %}
+	<div class="navbar navbar-inverse">
+		<div class="navbar-collapse collapse navbar-inverse-collapse">
+			<div class="container">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="#">Home</a>
+					</li>
 
-                
-		  </div>
+				</ul>
+				<div class="navbar-form navbar-right" role="search">
+				{% if request.user.is_authenticated %}
+				<p>Hello, </p>
+					<a href='registration/'>
+						<button class="btn btn-default">Sign Out</button>
+					</a>
+				{% else %}
+					<div class="form-group">
+						<input type="text" class="form-control" name="username" placeholder="Username"></div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="password" placeholder="Password"></div>
+					<button type="submit" class="btn btn-default">Sign In</button>
+					<a href='registration/'>
+						<button class="btn btn-default">Sign Up</button>
+					</a>
+				{% endif %}
+				</div>
+			</div>
 		</div>
-		<div class="container">
-			<table class="table table-striped table-hover">
-				<tr>
-					<td>Chat id</td>
-					<td>Chat name</td>
-				</tr>
-				{% for chat in chats %}
-				<tr style="cursor: pointer" onclick="document.location = 'chat/{{ chat.id }}'">
-					<td>{{ chat.id }}</td>
-					<td>{{ chat.chat_name }}</td>
-				</tr>
+	</div>
+	<div class="container">
+		<table class="table table-striped table-hover">
+			<tr>
+				<td>Chat id</td>
+				<td>Chat name</td>
+			</tr>
+			{% for chat in chats %}
+			<tr style="cursor: pointer" onclick="document.location = 'chat/{{ chat.id }}'">
+				<td>{{ chat.id }}</td>
+				<td>{{ chat.chat_name }}</td>
+			</tr>
 			{% endfor %}
-		</div>
-	</body>
+		</table>
+	</div>
+</body>
 
 </html>
