--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -25,23 +25,30 @@
 					</li>
 
 				</ul>
-				<div class="navbar-form navbar-right" role="search">
 				{% if user.is_authenticated %}
-				<span>Hello, {{ user.username }}</span>
+				<div class="navbar-form navbar-right" role="search">
+					<span>Hello, {{ user.username }}</span>
 					<a href='registration/'>
 						<button class="btn btn-default">Sign Out</button>
 					</a>
+				</div>
 				{% else %}
-					<div class="form-group">
-						<input type="text" class="form-control" name="username" placeholder="Username"></div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="password" placeholder="Password"></div>
-					<button type="submit" class="btn btn-default">Sign In</button>
+				<div class="navbar-form navbar-right" role="search">
 					<a href='registration/'>
 						<button class="btn btn-default">Sign Up</button>
 					</a>
-				{% endif %}
 				</div>
+				<div class="navbar-form navbar-right" role="search">
+					<form id="signin" action="/login/" method="post">
+						{% csrf_token %}
+						<div class="form-group">
+							<input type="text" class="form-control" name="username" placeholder="Username"></div>
+						<div class="form-group">
+							<input type="text" class="form-control" name="password" placeholder="Password"></div>
+						<button type="submit" class="btn btn-default">Sign In</button>
+					</form>
+				</div>
+				{% endif %}
 			</div>
 		</div>
 	</div>
