--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -28,7 +28,7 @@
 				{% if user.is_authenticated %}
 				<div class="navbar-form navbar-right" role="search">
 					<span>Hello, {{ user.username }}</span>
-					<a href='registration/'>
+					<a href='/logout/'>
 						<button class="btn btn-default">Sign Out</button>
 					</a>
 				</div>
