--- a/chat/templates/registration.html
+++ b/chat/templates/registration.html
@@ -10,6 +10,7 @@
   <style type="text/css" media="screen"></style>
 </head>
 <body>
+  {% include 'topmenu.html' %}
   <div class="container">
     <div class="col-lg-6 offset-3">
       <form id="reg_form" class="form-horizontal" action="/create_user/" method="post">
@@ -74,7 +75,7 @@
       -->
       <div class="form-group">
         <!-- Button -->
-      <button class="btn btn-success">Register</button>
+        <button class="btn btn-success">Register</button>
         <div class="controls"></div>
       </div>
     </fieldset>
