--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -18,6 +18,7 @@
 		</style>
 	</head>
 	<body onload="authorisation()">
+		{% include 'topmenu.html' %}
 		<div class="container">
 		{% csrf_token %}
 			    <div class="col-lg-2"></div>
@@ -31,7 +32,13 @@
 			        	</div>
 			        	<div class="col-lg-6">
 						<ul class="breadcrumb">
-						  <li id="username" class="active">User: Unknown</li>
+						  <li id="username" class="active">
+						  {% if user.is_authenticated %}
+						  User: {{ user.username }}
+						  {% else %}
+						  User: Guest
+						  {% endif %}
+						  </li>
 						</ul>
 			        	</div>
 
