--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -16,42 +16,7 @@
 </head>
 <body>
 	{% csrf_token %}
-	<div class="navbar navbar-inverse">
-		<div class="navbar-collapse collapse navbar-inverse-collapse">
-			<div class="container">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#">Home</a>
-					</li>
-
-				</ul>
-				{% if user.is_authenticated %}
-				<div class="navbar-form navbar-right" role="search">
-					<span>Hello, {{ user.username }}</span>
-					<a href='/logout/'>
-						<button class="btn btn-default">Sign Out</button>
-					</a>
-				</div>
-				{% else %}
-				<div class="navbar-form navbar-right" role="search">
-					<a href='registration/'>
-						<button class="btn btn-default">Sign Up</button>
-					</a>
-				</div>
-				<div class="navbar-form navbar-right" role="search">
-					<form id="signin" action="/login/" method="post">
-						{% csrf_token %}
-						<div class="form-group">
-							<input type="text" class="form-control" name="username" placeholder="Username"></div>
-						<div class="form-group">
-							<input type="text" class="form-control" name="password" placeholder="Password"></div>
-						<button type="submit" class="btn btn-default">Sign In</button>
-					</form>
-				</div>
-				{% endif %}
-			</div>
-		</div>
-	</div>
+	{% include 'topmenu.html' %}
 	<div class="container">
 		<table class="table table-striped table-hover">
 			<tr>
