--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -1,65 +1,58 @@
 {% load staticfiles %}
 {% csrf_token %}
-
 <!Doctype HTML>
 <html>
-	<head>
-		<meta charset="utf8">
-		<title>Web Chat</title> 
-		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
-		<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-		<style type="text/css" media="screen">
-			.mygrid-wrapper-div {
-				height: 480px;
-				overflow-y: auto;
-				
-			}
+<head>
+	<meta charset="utf8">
+	<title>Web Chat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+	<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+	<style type="text/css" media="screen">
+			
 		</style>
-	</head>
-	<body onload="authorisation()">
-		{% include 'topmenu.html' %}
-		<div class="container">
+</head>
+<body onload="startInterval()">
+	{% include 'topmenu.html' %}
+	<div class="container">
 		{% csrf_token %}
-			    <div class="col-lg-2"></div>
-			    <div class="col-lg-8">
-  				<div class="form-group">
-			        <div class="row">
-			        	<div class="col-lg-6">
+		<div class="col-lg-2"></div>
+		<div class="col-lg-8">
+			<div class="form-group">
+				<div class="row">
+					<div class="col-lg-6">
 						<ul class="breadcrumb">
-						  <li id="chatname" class="active">Chat: {{ chat.chat_name }}</li>
+							<li id="chatname" class="active">Chat: {{ chat.chat_name }}</li>
 						</ul>
-			        	</div>
-			        	<div class="col-lg-6">
+					</div>
+					<div class="col-lg-6">
 						<ul class="breadcrumb">
-						  <li id="username" class="active">
-						  {% if user.is_authenticated %}
+							<li id="username" class="active">
+								{% if user.is_authenticated %}
 						  User: {{ user.username }}
 						  {% else %}
 						  User: Guest
 						  {% endif %}
-						  </li>
+							</li>
 						</ul>
-			        	</div>
+					</div>
 
-			        </div>
-			      	<div class="mygrid-wrapper-div">
-			      	<table id="chatTable" class="table">
-			      		
-					</table>
-			      	</div>
-			      	<form id="post_message">
-			      	{% csrf_token %}
-			        <textarea class="form-control" rows="3" id="textArea" name="message" onkeypress="if (event.keyCode == 13 && event.shiftKey) this.innterHTML += '\n'; else if (event.keyCode == 13)post_message(); "></textarea>
-			        <input type="hidden" name="user_id" id="user_id" />
-			        </form>
-			        <button class="btn btn-primary" onclick="post_message()">Send</button>
-			        <button href="../../" class="btn btn-primary">Exit</button>
-			      </div>
-			      </div>
-			    </div>
-
+				</div>
+				<div class="mygrid-wrapper-div">
+					<table id="chatTable" class="table"></table>
+				</div>
+				<form id="post_message">
+					{% csrf_token %}
+					<textarea class="form-control" rows="3" id="textArea" name="message" onkeypress="if (event.keyCode == 13 && event.shiftKey) this.innterHTML += '\n'; else if (event.keyCode == 13)post_message(); "></textarea>
+					<input type="hidden" name="user_id" id="user_id" />
+				</form>
+				<button class="btn btn-primary" onclick="post_message()">Send</button>
+				<a href="/"><button class="btn btn-default">Exit</button></a>
+			</div>
 		</div>
-	</body>
+	</div>
+
+</body>
 
 </html>
