--- a/chat/templates/registration.html
+++ b/chat/templates/registration.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf8">
   <title>Web Chat</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
   <script language="JavaScript" type="text/javascript" src="{% static 'js/registration.js' %}"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-  <style type="text/css" media="screen"></style>
+  
 </head>
 <body>
   {% include 'topmenu.html' %}
