--- a/chat/templates/registration.html
+++ b/chat/templates/registration.html
@@ -76,7 +76,7 @@
       -->
       <div class="form-group">
         <!-- Button -->
-        <button class="btn btn-success">Register</button>
+        <button class="btn btn-primary">Register</button>
         <div class="controls"></div>
       </div>
     </fieldset>
