--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -7,7 +7,7 @@
 	<title>Web Chat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-	<script language="JavaScript" type="text/javascript" src="{% static 'js/script.js' %}"></script>
+	<script language="JavaScript" type="text/javascript" src="{% static 'js/chat.js' %}"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<style type="text/css" media="screen">
 			
