--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -44,7 +44,7 @@
 				</div>
 				<form id="post_message">
 					{% csrf_token %}
-					<textarea class="form-control" rows="3" id="textArea" name="message" onkeypress="if (event.keyCode == 13 && event.shiftKey) this.innterHTML += '\n'; else if (event.keyCode == 13)post_message(); "></textarea>
+					<textarea class="form-control" rows="3" id="textArea" name="message" onkeypress="textAreaKey(this, event)"></textarea>
 					<input type="hidden" name="user_id" id="user_id" />
 				</form>
 				<button class="btn btn-primary" onclick="post_message()">Send</button>
