--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -53,7 +53,13 @@
 		<div class="col-lg-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">Users</div>
-				<div class="panel-body panel-users">Panel content</div>
+				<div class="panel-body panel-users">
+					<div id="chat-users" style="display:none">
+						{% for user in chat.users %}
+							user.username<br />
+						{% endfor %}
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
