--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -56,7 +56,7 @@
 				<div class="panel-body panel-users">
 					<div id="chat-users" style="display:none">
 						{% for user in chat.users %}
-							user.username<br />
+							{{ user.username }} <br />
 						{% endfor %}
 					</div>
 				</div>
