--- a/chat/templates/topmenu.html
+++ b/chat/templates/topmenu.html
@@ -16,7 +16,7 @@
 				</div>
 				{% else %}
 				<div class="navbar-form navbar-right" role="search">
-					<a href='registration/'>
+					<a href='/registration/'>
 						<button class="btn btn-default">Sign Up</button>
 					</a>
 				</div>
