--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -48,11 +48,7 @@
 				<a href="/">
 					<button class="btn btn-default">Exit</button>
 				</a>
-				<form id="delChatForm" action="/delete_user_from_chat/" method="post">
-					{% csrf_token %}
-					<input type="hidden" name="chat_id" value="{{ chat.id }}">
-					<button class="btn btn-default">Leave Chat</button>
-				</form>
+				<button class="btn btn-default" onclick="leaveChat({{ chat.id }})">Leave Chat</button>
 			</div>
 		</div>
 		<div class="col-lg-4">
