--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -20,7 +20,7 @@
 		-->
 			{% for chat in chats %}
 		<tr class="tr-hover">
-			<td onclick="document.location = 'chat/{{ chat.id }}'">
+			<td onclick="document.location = '/chat/{{ chat.id }}'">
 				<h4>{{ chat.chat_name }}</h4>
 			</td>
 			<td class="td-chats-button">
