--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -52,6 +52,9 @@
 				<a href="/">
 					<button class="btn btn-default">Exit</button>
 				</a>
+				<a href="/add_files/">
+					<button class="btn btn-default">Upload File</button>
+				</a>
 			</div>
 		</div>
 		<div class="col-lg-4">
