--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -52,7 +52,7 @@
 				<a href="/">
 					<button class="btn btn-default">Exit</button>
 				</a>
-				<a href="/add_files/">
+				<a href="/add_file/">
 					<button class="btn btn-default">Upload File</button>
 				</a>
 			</div>
