--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -11,11 +11,10 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 	<style type="text/css" media="screen"></style>
 </head>
-<body onload="main('{{ user.username }}')">
+<body onload="main('{{ user.username }}','{{ chat.id }}')">
 	{% include 'topmenu.html' %}
 	<div class="container">
 		<div id="alert-placeholder"></div>
-		{% csrf_token %}
 		<div class="col-lg-8">
 			<div class="form-group">
 				<div class="row">
@@ -47,14 +46,18 @@
 					<input type="hidden" name="user_id" id="user_id" />
 				</form>
 				<button class="btn btn-primary" onclick="post_message()">Send</button>
-				<button class="btn btn-default" onclick="leaveChat({{ chat.id }})">Leave Chat</button>
+				<button class="btn btn-default" onclick="leaveChat()">Leave Chat</button>
 				{% endif %}
 				<a href="/">
 					<button class="btn btn-default">Exit</button>
 				</a>
-				<a href="/add_file/">
-					<button class="btn btn-default">Upload File</button>
-				</a>
+				<button class="btn btn-default" onclick="addFile()">Upload File</button>
+				<form style="/*display: none*/" id="upload-form" action="add_file/" method="post" enctype="multipart/form-data">
+					{% csrf_token %}
+					{{ form.docfile }}
+					<!--<input type="hidden" value="{{ chat.id }}" name="chat_id" />-->
+					<button>Upload</button>
+				</form>
 			</div>
 		</div>
 		<div class="col-lg-4">
