--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -54,7 +54,12 @@
 				<button class="btn btn-default" onclick="addFile()">Upload File</button>
 				<form style="/*display: none*/" id="upload-form" action="add_file/" method="post" enctype="multipart/form-data">
 					{% csrf_token %}
-					{{ form.docfile }}
+					<p>{{ form.non_field_errors }}</p>
+					<p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
+					<p>
+						{{ form.docfile.errors }}
+						{{ form.docfile }}
+					</p>
 					<!--<input type="hidden" value="{{ chat.id }}" name="chat_id" />-->
 					<button>Upload</button>
 				</form>
